# nextgen-os

./: CMakeLists.txt  Makefile  README.md  date  head  initrd.img  link.ld
image/: MENU.LST  initrd.img
src/: bootinfo.h  bootinfo.inc  cpuid.c  cpuid.h  cpuid_asm.asm  date.h  fs.c  fs.h  func.h  gdt.c  idt.c  initrd.c  initrd.h  irq.c  isrs.c  kb.c  keyb.h  kheap.c  kheap.h  main.c  ordered_array.c  ordered_array.h  paging.c  paging.h  rtc.c  rtc.h  scrn.c  scrn.h  shell.c  start.asm  stdlib.c  stdlib.h  system.h  timer.c  va_list.h  win_mngr.c  win_mngr.h
